[package]
name = "hello-crates-grrs"
version = "0.1.0"
authors = ["Luisan <luisangelsc@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A tool to search inside files"
readme = "README.md"
homepage = "https://github.com/LuisanSuarez/grrs"
repository = "https://github.com/LuisanSuarez/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# Make tests work with the name used in the tutorial
[[bin]]
name = "grrs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
anyhow = "1.0.71"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "2.1.5"
assert_fs = "1.0.13"


